--- a/src/App.css
+++ b/src/App.css
@@ -249,7 +249,12 @@
   margin: 10px;
   /* width: 150px;
   height: 150px; */
-  padding-left: 5px;
+  padding: 6px;
+}
+
+.App-content-banner > a  {  
+  width: 160px;
+  height: 150px;  
 }
 
 .App-content-banner > a > img {  
