--- a/src/App.css
+++ b/src/App.css
@@ -78,21 +78,20 @@
 }
 
 /**************top right****************************/
-.App-top-nav ul{
+.App-top-nav div{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
  }
  
-.App-top-nav > ul > li {
-  list-style-type: none;
+.App-top-nav > div > div {
   text-align: center;
   width: 99%;
   margin: 2px;
 }
 
 
-.App-top-nav > ul > li > a > h5:hover {
+.App-top-nav > div > div:hover {
   background: #69b7eb;
   list-style-type: #9745;
   border-radius: 5px;
@@ -101,12 +100,17 @@
   
 }
 
-.App-top-nav > ul > li > a > h5{
+.App-top-nav > div > div {
   border-radius: 5px;
-  border: 2px solid green;
-  
+  border: 2px solid green;  
   
 }
+
+.App-top-nav > div > div > a{
+  text-decoration: none  
+  
+}
+
 /***************separator*****************/
 .App-content-separator{
   animation: change-background 12s ease infinite;
@@ -135,18 +139,17 @@
    
 }
 /**************nav right****************************/
-.App-content-right-nav ul{
+.App-content-right-nav div{
   display: flex;
   flex-direction: column;
  }
  
-.App-content-right-nav ul li {
-  list-style-type: none;
+.App-content-right-nav  {
   text-align: center;
 }
 
 
-.App-content-right-nav ul li h5:hover {
+.App-content-right-nav div h5:hover {
   background: #69b7eb;
   list-style-type: none;
   border-radius: 5px;
@@ -155,7 +158,7 @@
 
 }
 
-.App-content-right-nav ul li h5{
+.App-content-right-nav div  h5{
   border-radius: 5px;
   border-bottom: 2px solid green;
   border-right: 2px solid green;
@@ -163,7 +166,7 @@
 
 }
  /************************nav 2 level**************************/
-.App-content-right-nav ul li ul{
+.App-content-right-nav div ul{
   display: flex;
   flex-direction: column;
   justify-content: right;
@@ -173,7 +176,7 @@
   /* display: none; */
 /*} */
 
-.App-content-right-nav ul li h6:hover {
+.App-content-right-nav div div h6:hover {
   background: #69b7eb;
   list-style-type: none;
   border-radius: 5px;
