--- a/src/App.css
+++ b/src/App.css
@@ -220,12 +220,16 @@
   padding-left: 5px;
 }
 .App-content-2row {
+  
   border-radius: 20px;
   margin: 10px;
-  width: 47%;
+  width: 49%;
   padding-left: 5px;
 }
 .App-content-2row section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   border: 2px solid yellowgreen;
   border-radius: 20px;
   padding-left: 5px;
